<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_calls"
        android:icon="@drawable/ic_call_black_24dp"
        android:title="@string/title_calls" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_message_black_24dp"
        android:title="@string/title_messages" />

    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/ic_camera_black_24dp"
        android:title="@string/title_camera" />

    <item
        android:id="@+id/navigation_recorder"
        android:icon="@drawable/ic_mic_black_24dp"
        android:title="@string/title_recorder" />

</menu>
